# usdm-osb-uploader

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: pypi_release.yml
src/usdm_osb_uploader/: cli.py  settings.py
src/usdm_osb_uploader/osb/: activities.py  arms.py  create_study.py  criteria.py  download_usdm.py  elements.py  epochs.py  epochs_visits_soa.py  high_level_design.py  objectivies_endpoints.py  osb_api.py  population.py  soa.py  visits.py
test/: Study_000106_usdm.json
